Fix framework-errorprone context lookup and stale-instance handling
Review follow-ups to the Error Prone plugin module:

- EisopContextAdapter uses context.get(JavacProcessingEnvironment.class) rather
  than JavacProcessingEnvironment.instance: instance() would construct and
  register a fresh environment unrelated to the compilation, so the documented
  IllegalStateException was dead code. The message now describes the real
  condition (a Context that is not a live compilation's), and a new test shows
  the environment is present even under -proc:none.
- Track the reported configuration-error Context (configErrorContext) instead of
  a plain boolean, so a reused BugChecker instance still reports a config error
  in a later compilation.
- Remove the unused getTrees convenience method.
- Rename the publication-configuring helper to frameworkErrorpronePom to avoid
  colliding with the frameworkErrorprone MavenPublication.
- Deduplicate test setup and tighten the adapter tests.